--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "TeamCity booster",
   "description": "teamcity booster is a web extension to push build in queue",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "icons": {
     "128": "img/tc_logo_128.png"
   },
@@ -18,7 +18,7 @@
     "open_in_tab": true
   },
   "content_scripts": [{
-    "matches": ["http://*/*", "https://*/*"],
+    "matches": ["<all_urls>"],
     "js": ["js/options.js"]
   }],
 
